--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,9 +1,9 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using ContactManager
-@using ContactManager.Data
-@namespace ContactManager.Pages
+@using leaderboard_league_app
+@using leaderboard_league_app.Data
+@namespace leaderboard_league_app.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using ContactManager.Authorization;
+@using leaderboard_league_app.Authorization;
 @using Microsoft.AspNetCore.Authorization
-@using ContactManager.Models
+@using leaderboard_league_app.Models
 @inject IAuthorizationService AuthorizationService
