--- a/Pages/Contacts/Details2.cshtml
+++ b/Pages/Contacts/Details2.cshtml
@@ -1,5 +1,5 @@
 @page "{id:int}"
-@model ContactManager.Pages.Contacts.Details2Model
+@model leaderboard_league_app.Pages.Contacts.Details2Model
 
 @{
     ViewData["Title"] = "Details2";
@@ -16,30 +16,6 @@
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Contact.Name)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Contact.Address)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Contact.Address)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Contact.City)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Contact.City)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Contact.State)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Contact.State)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Contact.Zip)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Contact.Zip)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Contact.Email)
