--- a/Pages/Contacts/Index.cshtml
+++ b/Pages/Contacts/Index.cshtml
@@ -1,5 +1,5 @@
 @page
-@model ContactManager.Pages.Contacts.IndexModel
+@model leaderboard_league_app.Pages.Contacts.IndexModel
 
 @{
     ViewData["Title"] = "Index";
@@ -17,22 +17,7 @@
                 @Html.DisplayNameFor(model => model.Contact[0].Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Contact[0].Address)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Contact[0].City)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Contact[0].State)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Contact[0].Zip)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.Contact[0].Email)
-            </th>
-             <th>
-                @Html.DisplayNameFor(model => model.Contact[0].Status)
             </th>
             <th></th>
         </tr>
@@ -44,44 +29,14 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Address)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.City)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.State)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Zip)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
-                           <td>
-                    @Html.DisplayFor(modelItem => item.Status)
-                </td>
-                <td>
-                    @if ((await AuthorizationService.AuthorizeAsync(
-                     User, item,
-                     ContactOperations.Update)).Succeeded)
-                    {
-                        <a asp-page="./Edit" asp-route-id="@item.ContactId">Edit</a>
-                        <text> | </text>
-                    }
-
-                    <a asp-page="./Details" asp-route-id="@item.ContactId">Details</a>
-
-                    @if ((await AuthorizationService.AuthorizeAsync(
-                     User, item,
-                     ContactOperations.Delete)).Succeeded)
-                    {
-                        <text> | </text>
-                        <a asp-page="./Delete" asp-route-id="@item.ContactId">Delete</a>
-                    }
-                </td>
-            </tr>
-        }
+            <td>
+                <a asp-page="./Edit" asp-route-id="@item.ContactId">Edit</a> |
+                <a asp-page="./Details" asp-route-id="@item.ContactId">Details</a> |
+                <a asp-page="./Delete" asp-route-id="@item.ContactId">Delete</a>
+            </td>
+        </tr>
+}
     </tbody>
 </table>
-
