--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewData["Title"] - CM</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/ContactManager.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/leaderboard_league_app.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
@@ -39,7 +39,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - ContactManager - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2021 - leaderboard_league_app - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
